style.css
@font-face {
  font-family: 'Reformat Grotesk';
  src: url("ReformatGrotesk-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  font-display: swap;
}

:root{
  --space: 1.5em;
}

@media only screen and (min-width: 750px){
  :root{
    --space: 2em;
  }
}

*, *:before, *:after {
  box-sizing: border-box;
}

  html{
    font-size: 67.5%;
  }

  body {
    background: white;
    color: black;
    font: 400 1.6rem/1.15 Reformat Grotesk, Arial, sans-serif;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    letter-spacing: -0.005em;
    margin: 0;
    text-rendering: optimizeLegibility;
    transition: background 0.5s ease-in-out;
  }

  a {
    color: inherit;
    text-decoration: none;
  }

    a:hover {
      color: dimgray;
    }

  figure {
    margin: 0;
    padding: 0;
  }

  h1, h2, h3, h4, h5, h6 {
    font: inherit;
    line-height: inherit;
    margin: 0;
  }

  ul{
    list-style: none;
    margin: 0;
    padding: 0;
  }

  p {
    margin: 0;
  }

  ::selection {
    background: black;
    color: white;
  }

#content {
  padding: 1rem;
}

  #name{}

  #description{
    margin-left: var(--space);
  }

  #projects{
    margin-left: calc(var(--space) * 2);
  }

    #projects-list{
      margin-left: calc(var(--space));
    }

      #projects-list li{}

        #projects-list a{
          display: inline-block;
          padding-left: calc(var(--space) * 0.5);
          position: relative;
          text-indent: calc(-1 * var(--space) * 0.5);
        }

        #projects-list a:after{
          content: "";
          font-size: 1.2rem;
          letter-spacing: 0.01em;
          opacity: 0;
          pointer-events: none;
          position: absolute;
            top: 0;
            left: 0;
          transform: translate(calc(-100% - 0.5em), 0.4vw);
        }

          @media (hover: hover) {
            #projects-list a:hover:after{
              opacity: 1;
            }
          }

          #projects-list a.heydays:after{
            content: "Heydays";
          }

          #projects-list a.mariuskim:after{
            content: "marius.kim";
          }

          #projects-list a.snohetta:after{
            content: "Snøhetta";
          }

          #projects-list a.personal:after{
            content: "Self-initiated";
          }

          .nda{
            cursor: not-allowed;
          }

  #awards{
    margin-left: calc(var(--space) * 4);
  }

  #other{
    margin-left: calc(var(--space) * 5);
  }

  #research{
    margin-left: calc(var(--space) * 6);
  }

  #contact{
    margin-left: calc(var(--space) * 7);
  }

@media only screen and (min-width: 750px){
  body{
    font-size: 2.2vw;
    line-height: 1.15;
  }
}

@media (prefers-color-scheme: dark) {
  body{
    background: black;
    color: white;
  }

  a:hover{
    color: gray;
  }

  ::selection{
    background: white;
    color: black;
  }
}

.fallback{
  font-family: 'Arial', sans-serif;
}

